// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphqlGun can do the basics 1`] = `
Object {
  "foo": Object {
    "bar": "baz",
  },
}
`;

exports[`graphqlGun iterates over sets 1`] = `
Object {
  "_chain": undefined,
  "sets": Array [],
  "thing1": Object {
    "_chain": undefined,
  },
  "thing2": Object {
    "_chain": undefined,
  },
}
`;

exports[`graphqlGun iterates over sets 2`] = `
Object {
  "_chain": undefined,
  "sets": Array [],
  "thing1": Object {
    "_chain": undefined,
  },
  "thing2": Object {
    "_chain": undefined,
  },
}
`;

exports[`graphqlGun lets you grab the chain at any point 1`] = `
Object {
  "grab": Object {
    "_chain": undefined,
    "bar": Object {
      "some": "foo",
    },
  },
}
`;

exports[`graphqlGun lets you grab the chain at any point 2`] = `
Object {
  "grab": Object {
    "_chain": undefined,
    "bar": Object {
      "some": "stuff",
    },
  },
}
`;
